<resources>
    <string name="app_name">LabWidgets</string>
    <string name="loading_complete">Loading Complete</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Laboratorio Widgets</string>
    <string name="nav_header_subtitle">Carlos Obando y Felipe Piedra</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_barra">Barra de carga</string>
    <string name="menu_rating">Estrellas</string>
    <string name="menu_video">Video</string>
    <string name="menu_webview">Web</string>


    <string name="home_second">Home Second</string>
</resources>
